--- a/course-starting-project/index.html
+++ b/course-starting-project/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Understanding TypeScript</title>
   <script src="app.js" defer></script>
+  <script src="person.js" defer></script>
 </head>
 <body>
   
